validator: Add a check for blocks in the future
Even blocks validated using the RPC `injection/block` include a
check for blocks in the future

Accordingly, we give to the activation protocol a timestamp which is
one year in the past.

--- a/src/bin_sandbox/dune
+++ b/src/bin_sandbox/dune
@@ -42,6 +42,7 @@
          --current-client-binary %{bin:tezos-client}
          --current-admin-client-binary %{bin:tezos-admin-client}
          --current-node-binary %{bin:tezos-node}
+         --timestamp-delay=-600
          )))
 
 (rule
