Base, Crypto: shadow Map,Set,Seq with lwt-res version

--- a/src/lib_base/tezos-base.opam
+++ b/src/lib_base/tezos-base.opam
@@ -12,6 +12,7 @@ depends: [
   "tezos-crypto"
   "data-encoding" { = "0.2" }
   "tezos-error-monad"
+  "tezos-lwt-result-stdlib"
   "tezos-event-logging"
   "tezos-micheline"
   "tezos-rpc"
