--- a/src/lib_base/dune
+++ b/src/lib_base/dune
@@ -5,6 +5,7 @@
                    -open Tezos_crypto
                    -open Data_encoding
                    -open Tezos_error_monad
+                   -open Tezos_lwt_result_stdlib.Lwtreslib
                    -open Tezos_rpc
                    -open Tezos_clic
                    -open Tezos_micheline
@@ -14,6 +15,7 @@
             tezos-crypto
             data-encoding
             tezos-error-monad
+            tezos-lwt-result-stdlib
             tezos-event-logging
             tezos-rpc
             tezos-clic
