--- a/src/lib_crypto/dune
+++ b/src/lib_crypto/dune
@@ -4,6 +4,7 @@
  (flags (:standard -open Tezos_stdlib
                    -open Data_encoding
                    -open Tezos_error_monad
+                   -open Tezos_lwt_result_stdlib.Lwtreslib
                    -open Tezos_rpc))
  (libraries tezos-stdlib
             data-encoding
