--- a/src/lib_protocol_environment/tezos-protocol-environment-structs.opam
+++ b/src/lib_protocol_environment/tezos-protocol-environment-structs.opam
@@ -9,6 +9,7 @@ depends: [
   "tezos-tooling" { with-test }
   "dune" { >= "1.11" }
   "tezos-stdlib"
+  "tezos-crypto"
   "tezos-protocol-environment-packer"
 ]
 build: [
