--- a/src/lib_error_monad/tezos-error-monad.opam
+++ b/src/lib_error_monad/tezos-error-monad.opam
@@ -8,6 +8,7 @@ license: "MIT"
 depends: [
   "tezos-tooling" { with-test }
   "dune" { >= "1.11" }
+  "ocaml" { >= "4.07" }
   "tezos-stdlib"
   "data-encoding" { = "0.2" }
   "lwt"
