--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -511,6 +511,9 @@ integration:examples_test_example:
 
 documentation:build:
   <<: *test_definition
+  except:
+    - /-release$/
+    - tags
   script:
     - make doc-html
   artifacts:
@@ -520,6 +523,9 @@ documentation:build:
 
 documentation:linkcheck:
   <<: *test_definition
+  except:
+    - /-release$/
+    - tags
   script:
     - make doc-html-and-linkcheck
   allow_failure: true
