CI: disable build and test phases for release branches
We already run the build and test phases in branches like v7-release.
Then we push the tag and latest-release, but there is no need
to delay Docker images for tests that have already been run.
The publish phase does not need the build phase to run.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,8 @@ stages:
     - mainnet-staging
     - zeronet-snapshots
     - mainnet-snapshots
+    - latest-release
+    - tags
   before_script:
     - . ./scripts/version.sh
 
