--- a/src/proto_alpha/lib_client/dune
+++ b/src/proto_alpha/lib_client/dune
@@ -6,6 +6,7 @@
             tezos-shell-services
             tezos-client-base
             tezos-mockup-registration
+            tezos-proxy
             tezos-rpc
             tezos-signer-backends
             tezos-protocol-alpha-parameters)
