proxy: create Client_context instance (holed)

--- a/src/lib_client_base_unix/dune
+++ b/src/lib_client_base_unix/dune
@@ -9,6 +9,7 @@
             tezos-mockup
             tezos-mockup-registration
             tezos-mockup-commands
+            tezos-proxy
             tezos-signer-backends.unix
             tezos-shell-services)
  (flags (:standard -open Tezos_base__TzPervasives
