--- a/src/lib_client_base_unix/tezos-client-base-unix.opam
+++ b/src/lib_client_base_unix/tezos-client-base-unix.opam
@@ -16,6 +16,7 @@ depends: [
   "tezos-client-commands"
   "tezos-mockup-registration"
   "tezos-mockup-commands"
+  "tezos-proxy"
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
