proxy: delegate locally unimplemented RPC to http
This allows to have the best of both worlds: executing
some RPCs locally, hereby discharging the node from
computations; while still supporting all RPCs
that the regular client supports.

This commit adds tests for RPCs that are delegated to http

--- a/src/lib_proxy/tezos-proxy.opam
+++ b/src/lib_proxy/tezos-proxy.opam
@@ -9,6 +9,7 @@ depends: [
   "dune" { >= "2.0" }
   "tezos-base"
   "tezos-client-base"
+  "tezos-mockup-proxy"
   "tezos-protocol-environment"
   "tezos-rpc"
   "tezos-shell-services"
