--- a/src/lib_proxy/dune
+++ b/src/lib_proxy/dune
@@ -4,6 +4,7 @@
  (libraries
    tezos-base
    tezos-client-base
+   tezos-mockup-proxy
    tezos-protocol-environment
    tezos-rpc
    tezos-shell-services)
