--- a/src/lib_base/tezos-base.opam
+++ b/src/lib_base/tezos-base.opam
@@ -17,7 +17,7 @@ depends: [
   "tezos-rpc"
   "ptime" { >= "0.8.4" }
   "ezjsonm" { >= "0.5.0" }
-  "ipaddr" { >= "4.0.0" }
+  "ipaddr" {>= "5.0.0" & < "6.0.0"}
   "re" { >= "1.7.2" }
 ]
 build: [
