Env1: expose lib_sapling
Co-Authored-By: Marco Stronati <marco@stronati.org>
Co-Authored-By: Marc beunardeau <marc.beunardeau@nomadic-labs.com>
Co-Authored-By: Mehdi Bouaziz <mehdi.bouaziz@nomadic-labs.com>

--- a/src/lib_protocol_environment/tezos-protocol-environment.opam
+++ b/src/lib_protocol_environment/tezos-protocol-environment.opam
@@ -8,10 +8,12 @@ license: "MIT"
 depends: [
   "tezos-tooling" { with-test }
   "dune" { >= "2.0" }
+  "sapling"
   "tezos-base"
   "tezos-protocol-environment-sigs"
   "tezos-protocol-environment-structs"
   "alcotest-lwt" { with-test & >= "1.1.0" }
+  "sapling"
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
