Proto/Test: tests for Sapling
Several tests at raw_context, alpha_context and interpreter level.

Co-Authored-By: Marco Stronati <marco@stronati.org>
Co-Authored-By: Marc beunardeau <marc.beunardeau@nomadic-labs.com>

--- a/src/proto_alpha/lib_protocol/test/dune
+++ b/src/proto_alpha/lib_protocol/test/dune
@@ -9,7 +9,8 @@
             tezos-client-base
             tezos-protocol-alpha-parameters
             tezos-test-services
-            tezos-client-alpha)
+            tezos-client-alpha
+            sapling)
  (flags (:standard -open Tezos_base__TzPervasives
                    -open Tezos_micheline
                    -open Tezos_client_alpha
