Proto/Client: add support for sapling commands
Co-Authored-By: Marco Stronati <marco@stronati.org>
Co-Authored-By: Marc beunardeau <marc.beunardeau@nomadic-labs.com>
Co-Authored-By: Mehdi Bouaziz <mehdi.bouaziz@nomadic-labs.com>
Co-Authored-By: Danny Willems <contact@danny-willems.be>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -954,6 +954,11 @@ opam:tezos-client-genesis-carthagenet:
   variables:
     package: tezos-client-genesis-carthagenet
 
+opam:tezos-client-sapling-alpha:
+  <<: *opam_definition
+  variables:
+    package: tezos-client-sapling-alpha
+
 opam:tezos-codec:
   <<: *opam_definition
   variables:
