--- a/src/proto_alpha/lib_client_commands/dune
+++ b/src/proto_alpha/lib_client_commands/dune
@@ -34,6 +34,7 @@
             tezos-client-alpha
             tezos-client-commands
             tezos-client-alpha-commands
+            tezos-client-sapling-alpha
             tezos-rpc)
  (library_flags (:standard -linkall))
  (modules alpha_commands_registration)
@@ -44,6 +45,7 @@
                    -open Tezos_client_alpha
                    -open Tezos_client_commands
                    -open Tezos_client_alpha_commands
+                   -open Tezos_client_sapling_alpha
                    -open Tezos_rpc)))
 
 (rule
