Tests_python: add Sapling integration tests
Co-Authored-By: Marco Stronati <marco@stronati.org>
Co-Authored-By: Marc beunardeau <marc.beunardeau@nomadic-labs.com>
Co-Authored-By: Mehdi Bouaziz <mehdi.bouaziz@nomadic-labs.com>
Co-Authored-By: Danny Willems <contact@danny-willems.be>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -534,6 +534,12 @@ integration:rpc:
     - poetry run pytest tests/test_rpc.py -s --log-dir=tmp
   stage: test
 
+integration:sapling:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests/test_sapling.py -s --log-dir=tmp
+  stage: test
+
 integration:tls:
   <<: *integration_python_definition
   script:
