Tests_python: add Sapling integration tests
Co-Authored-By: Marco Stronati <marco@stronati.org>
Co-Authored-By: Marc beunardeau <marc.beunardeau@nomadic-labs.com>
Co-Authored-By: Mehdi Bouaziz <mehdi.bouaziz@nomadic-labs.com>
Co-Authored-By: Danny Willems <contact@danny-willems.be>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -528,6 +528,12 @@ integration:rpc:
     - pytest tests_python/tests/test_rpc.py -s --log-dir=tmp
   stage: test
 
+integration:sapling:
+  <<: *integration_python_definition
+  script:
+    - pytest tests_python/tests/test_sapling.py -s --log-dir=tmp
+  stage: test
+
 integration:sha3:
   <<: *integration_python_definition
   script:
