--- a/src/lib_storage/tezos-storage.opam
+++ b/src/lib_storage/tezos-storage.opam
@@ -10,6 +10,7 @@ depends: [
   "dune" { >= "1.11" }
   "tezos-base"
   "tezos-lmdb"
+  "irmin" { >= "2.2.0" }
   "irmin-pack"
   "digestif" {>= "0.7.3"}
   "tezos-shell-services"
