Client: add mockup RPC_client class, for clarity
The point is that it makes the code more symmetric:
having a RPC_client.ml file in both
src/lib_mockup and src/lib_proxy.

This then makes the code of client_context_unix.ml
more uniform.

This was suggested by Ilias.

--- a/src/lib_mockup/dune
+++ b/src/lib_mockup/dune
@@ -12,7 +12,7 @@
 (library
  (name tezos_mockup)
  (public_name tezos-mockup)
- (modules files local_services persistence)
+ (modules files local_services persistence RPC_client)
  (libraries
    tezos-base
    tezos-client-base
