--- a/src/proto_alpha/lib_protocol/test/dune
+++ b/src/proto_alpha/lib_protocol/test/dune
@@ -11,7 +11,9 @@
             tezos-test-services)
  (flags (:standard -open Tezos_base__TzPervasives
                    -open Tezos_micheline
+                   -open Tezos_client_alpha
                    -open Tezos_protocol_alpha
+                   -open Tezos_protocol_environment_alpha
                    -open Tezos_alpha_test_helpers
                    -open Tezos_test_services)))
 
