--- a/src/proto_alpha/lib_protocol/test/helpers/dune
+++ b/src/proto_alpha/lib_protocol/test/helpers/dune
@@ -13,6 +13,8 @@
                    -open Tezos_micheline
                    -open Tezos_stdlib_unix
                    -open Tezos_protocol_alpha
+                   -open Tezos_client_alpha
+                   -open Tezos_protocol_environment_alpha
                    -open Tezos_shell_services)))
 
 (alias
