--- a/src/lib_base/tezos-base.opam
+++ b/src/lib_base/tezos-base.opam
@@ -19,6 +19,7 @@ depends: [
   "ezjsonm" { >= "0.5.0" }
   "ipaddr" {>= "5.0.0" & < "6.0.0"}
   "re" { >= "1.7.2" }
+  "crowbar" { with-test }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
