--- a/src/lib_base/test/dune
+++ b/src/lib_base/test/dune
@@ -1,6 +1,7 @@
 (executables
  (names
    test_time
+   test_p2p_addr
  )
  (libraries
    tezos-base
@@ -15,15 +16,20 @@
  (name buildtest)
  (deps
    test_time.exe
+   test_p2p_addr.exe
  ))
 
 (alias
  (name runtest_time)
  (action (run %{exe:test_time.exe})))
+(alias
+ (name runtest_p2p_addr)
+ (action (run %{exe:test_p2p_addr.exe})))
 
 (alias
  (name runtest)
  (package tezos-base)
  (deps
    (alias runtest_time)
+   (alias runtest_p2p_addr)
  ))
