--- a/src/lib_protocol_compiler/dune_protocol.template
+++ b/src/lib_protocol_compiler/dune_protocol.template
@@ -53,7 +53,7 @@ include Tezos_raw_protocol_%%LIB_VERSION%%.Main
  (library_flags (:standard -linkall))
  (flags (:standard -nopervasives -nostdlib
                    -w +a-4-6-7-9-29-32-40..42-44-45-48
-                   -warn-error -a+8
+                   -warn-error +a
                    -open Tezos_protocol_environment_%%LIB_VERSION%%__Environment
                    -open Pervasives
                    -open Error_monad))
@@ -73,7 +73,7 @@ include Tezos_raw_protocol_%%LIB_VERSION%%.Main
       tezos-protocol-environment-sigs
       tezos_raw_protocol_%%LIB_VERSION%%)
  (flags -w "+a-4-6-7-9-29-40..42-44-45-48"
-        -warn-error "-a+8"
+        -warn-error "+a"
         -nopervasives)
  (modules Protocol))
 
@@ -85,7 +85,7 @@ include Tezos_raw_protocol_%%LIB_VERSION%%.Main
       tezos-protocol-environment-sigs
       tezos_raw_protocol_%%LIB_VERSION%%)
  (flags -w "+a-4-6-7-9-29-40..42-44-45-48"
-        -warn-error "-a+8"
+        -warn-error "+a"
         -nopervasives)
  (modules Functor))
 
@@ -97,7 +97,7 @@ include Tezos_raw_protocol_%%LIB_VERSION%%.Main
             tezos-protocol-updater
             tezos-protocol-environment)
  (flags (:standard -w +a-4-6-7-9-29-32-40..42-44-45-48
-                   -warn-error -a+8))
+                   -warn-error +a))
  (modules Registerer))
 
 (alias
