Lwt_exit: test interaction of unregistration and after

--- a/src/lib_stdlib_unix/test/dune
+++ b/src/lib_stdlib_unix/test/dune
@@ -6,6 +6,7 @@
    test_lwt_exit_signal
    test_lwt_exit_clean_up
    test_lwt_exit_unregister_clean_up
+   test_lwt_exit_unregister_clean_up_with_after
    )
  (libraries tezos-stdlib-unix
             tezos-stdlib
@@ -61,6 +62,14 @@
  (action (run %{exe:test_lwt_exit_unregister_clean_up.exe})))
 
 (alias
+ (name buildtest)
+ (deps test_lwt_exit_unregister_clean_up_with_after.exe))
+
+(alias
+ (name runtest_test_lwt_exit_unregister_clean_up_with_after)
+ (action (run %{exe:test_lwt_exit_unregister_clean_up_with_after.exe})))
+
+(alias
  (name runtest)
  (package tezos-stdlib-unix)
  (deps (alias runtest_lwt_exit_exit)
@@ -69,6 +78,7 @@
        (alias runtest_lwt_exit_signal)
        (alias runtest_lwt_exit_clean_up)
        (alias runtest_test_lwt_exit_unregister_clean_up)
+       (alias runtest_test_lwt_exit_unregister_clean_up_with_after)
  ))
 
 (alias
