--- a/src/lib_crypto/test/dune
+++ b/src/lib_crypto/test/dune
@@ -3,6 +3,7 @@
         test_merkle
         test_base58
         test_ed25519
+        test_p256
         test_blake2b
         test_pvss
         test_crypto_box
@@ -22,6 +23,7 @@
        test_merkle.exe
        test_base58.exe
        test_ed25519.exe
+       test_p256.exe
        test_blake2b.exe
        test_pvss.exe
        test_crypto_box.exe
@@ -43,6 +45,10 @@
 (rule
  (alias runtest_ed25519)
  (action (run %{exe:test_ed25519.exe})))
+
+(rule
+ (alias runtest_p256)
+ (action (run %{exe:test_p256.exe})))
 
 (rule
  (alias runtest_blake2b)
@@ -67,6 +73,7 @@
        (alias runtest_merkle)
        (alias runtest_base58)
        (alias runtest_ed25519)
+       (alias runtest_p256)
        (alias runtest_blake2b)
        (alias runtest_pvss)
        (alias runtest_crypto_box)
