--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1419,8 +1419,7 @@ test_coverage:
     # We exclude from coverage old protocols and code that can't be
     # instrumented because of current limitations of bisect_ppx.
     OLD_PROTOCOLS: "src/proto_000_Ps9mPmXa src/proto_001_PtCJ7pwo src/proto_002_PsYLVpVv src/proto_003_PsddFKi3 src/proto_004_Pt24m4xi src/proto_005_PsBABY5H src/proto_005_PsBabyM1 src/proto_006_PsCARTHA"
-    # TODO try with future version, didn't work with bisect_ppx 2.4.1
-    NOT_INSTRUMENTABLE: "src/lib_crypto"
+    NOT_INSTRUMENTABLE: ""
     COVERAGE_EXCLUDE: "$OLD_PROTOCOLS $NOT_INSTRUMENTABLE"
   script:
     - scripts/instrument_dune_bisect.sh src/ --except $COVERAGE_EXCLUDE
