--- a/tezt/lib_tezos/dune
+++ b/tezt/lib_tezos/dune
@@ -1,5 +1,5 @@
 (library
  (name tezt_tezos)
  (public_name tezt-tezos)
- (libraries tezt hex)
+ (libraries tezt hex tezos-crypto)
  (flags (:standard -open Tezt -open Tezt.Base)))
