--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -571,6 +571,23 @@ tezt:main:
     expire_in: 1 day
     when: on_failure
 
+tezt:manual:migration:
+  <<: *test_definition
+  when: manual
+  script:
+    - export TEZOS_CLIENT_UNSAFE_DISABLE_DISCLAIMER=Y
+    - block_hash=$(wget https://snaps.tulip.tools/snapshots.json -O - | jq -r .Snapshots.mainnet_rolling.Blockhash)
+    - filename=$(wget https://snaps.tulip.tools/snapshots.json -O - | jq -r .Snapshots.mainnet_rolling.Filename)
+    - wget https://snaps.tulip.tools/$filename
+    - make
+    - scripts/prepare_migration_test.sh auto mainnet_*.rolling "$block_hash"
+    - dune exec ./tezt/manual_tests/main.exe -- migration --color --log-buffer-size 5000 --log-file tezt-migration.log
+  artifacts:
+    when: always
+    paths:
+      - tezt-migration.log
+    expire_in: 30 days
+
 ############################################################
 ## Stage: run doc integration tests                       ##
 ############################################################
