CI: update opam tests for 007

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -716,6 +716,11 @@ opam:tezos-006-PsCARTHA-test-helpers:
   variables:
     package: tezos-006-PsCARTHA-test-helpers
 
+opam:tezos-007-PryLyZ8A-test-helpers:
+  <<: *opam_definition
+  variables:
+    package: tezos-007-PryLyZ8A-test-helpers
+
 opam:tezos-accuser-006-PsCARTHA:
   <<: *opam_definition
   variables:
@@ -725,6 +730,16 @@ opam:tezos-accuser-006-PsCARTHA-commands:
   <<: *opam_definition
   variables:
     package: tezos-accuser-006-PsCARTHA-commands
+
+opam:tezos-accuser-007-PryLyZ8A:
+  <<: *opam_definition
+  variables:
+    package: tezos-accuser-007-PryLyZ8A
+
+opam:tezos-accuser-007-PryLyZ8A-commands:
+  <<: *opam_definition
+  variables:
+    package: tezos-accuser-007-PryLyZ8A-commands
 
 opam:tezos-accuser-alpha:
   <<: *opam_definition
@@ -746,6 +761,11 @@ opam:tezos-baker-006-PsCARTHA:
   variables:
     package: tezos-baker-006-PsCARTHA
 
+opam:tezos-baker-007-PryLyZ8A:
+  <<: *opam_definition
+  variables:
+    package: tezos-baker-007-PryLyZ8A
+
 opam:tezos-baker-alpha:
   <<: *opam_definition
   variables:
@@ -760,6 +780,16 @@ opam:tezos-baking-006-PsCARTHA-commands:
   <<: *opam_definition
   variables:
     package: tezos-baking-006-PsCARTHA-commands
+
+opam:tezos-baking-007-PryLyZ8A:
+  <<: *opam_definition
+  variables:
+    package: tezos-baking-007-PryLyZ8A
+
+opam:tezos-baking-007-PryLyZ8A-commands:
+  <<: *opam_definition
+  variables:
+    package: tezos-baking-007-PryLyZ8A-commands
 
 opam:tezos-baking-alpha:
   <<: *opam_definition
@@ -851,6 +881,16 @@ opam:tezos-client-006-PsCARTHA-commands:
   variables:
     package: tezos-client-006-PsCARTHA-commands
 
+opam:tezos-client-007-PryLyZ8A:
+  <<: *opam_definition
+  variables:
+    package: tezos-client-007-PryLyZ8A
+
+opam:tezos-client-007-PryLyZ8A-commands:
+  <<: *opam_definition
+  variables:
+    package: tezos-client-007-PryLyZ8A-commands
+
 opam:tezos-client-alpha:
   <<: *opam_definition
   variables:
@@ -890,6 +930,11 @@ opam:tezos-client-genesis-carthagenet:
   <<: *opam_definition
   variables:
     package: tezos-client-genesis-carthagenet
+
+opam:tezos-client-sapling-007-PryLyZ8A:
+  <<: *opam_definition
+  variables:
+    package: tezos-client-sapling-007-PryLyZ8A
 
 opam:tezos-client-sapling-alpha:
   <<: *opam_definition
@@ -946,6 +991,11 @@ opam:tezos-embedded-protocol-006-PsCARTHA:
   variables:
     package: tezos-embedded-protocol-006-PsCARTHA
 
+opam:tezos-embedded-protocol-007-PryLyZ8A:
+  <<: *opam_definition
+  variables:
+    package: tezos-embedded-protocol-007-PryLyZ8A
+
 opam:tezos-embedded-protocol-alpha:
   <<: *opam_definition
   variables:
@@ -981,6 +1031,16 @@ opam:tezos-endorser-006-PsCARTHA-commands:
   variables:
     package: tezos-endorser-006-PsCARTHA-commands
 
+opam:tezos-endorser-007-PryLyZ8A:
+  <<: *opam_definition
+  variables:
+    package: tezos-endorser-007-PryLyZ8A
+
+opam:tezos-endorser-007-PryLyZ8A-commands:
+  <<: *opam_definition
+  variables:
+    package: tezos-endorser-007-PryLyZ8A-commands
+
 opam:tezos-endorser-alpha:
   <<: *opam_definition
   variables:
@@ -1015,6 +1075,11 @@ opam:tezos-mempool-006-PsCARTHA:
   <<: *opam_definition
   variables:
     package: tezos-mempool-006-PsCARTHA
+
+opam:tezos-mempool-007-PryLyZ8A:
+  <<: *opam_definition
+  variables:
+    package: tezos-mempool-007-PryLyZ8A
 
 opam:tezos-mempool-alpha:
   <<: *opam_definition
@@ -1105,6 +1170,21 @@ opam:tezos-protocol-006-PsCARTHA-tests:
   <<: *opam_definition
   variables:
     package: tezos-protocol-006-PsCARTHA-tests
+
+opam:tezos-protocol-007-PryLyZ8A:
+  <<: *opam_definition
+  variables:
+    package: tezos-protocol-007-PryLyZ8A
+
+opam:tezos-protocol-007-PryLyZ8A-parameters:
+  <<: *opam_definition
+  variables:
+    package: tezos-protocol-007-PryLyZ8A-parameters
+
+opam:tezos-protocol-007-PryLyZ8A-tests:
+  <<: *opam_definition
+  variables:
+    package: tezos-protocol-007-PryLyZ8A-tests
 
 opam:tezos-protocol-alpha:
   <<: *opam_definition
