--- a/src/bin_client/dune
+++ b/src/bin_client/dune
@@ -28,11 +28,11 @@
               (tezos-client-006-PsCARTHA-commands.registration -> void_for_linking)
               (-> void_for_linking))
             (select void_for_linking-007-PryLyZ8A from
-              (tezos-client-007-PryLyZ8A-commands.registration -> void_for_linking)
+              (tezos-client-007-PryLyZ8A-commands-registration -> void_for_linking)
               (-> void_for_linking))
 
             (select void_for_linking-alpha from
-              (tezos-client-alpha-commands.registration -> void_for_linking)
+              (tezos-client-alpha-commands-registration -> void_for_linking)
               (-> void_for_linking))
             (select void_for_linking-demo-counter from
               (tezos-client-demo-counter -> void_for_linking)
