Client_base: fix .opam

--- a/src/lib_client_base/tezos-client-base.opam
+++ b/src/lib_client_base/tezos-client-base.opam
@@ -15,6 +15,7 @@ depends: [
   "tezos-rpc-http"
   "cmdliner"
   "alcotest" { with-test }
+  "sapling"
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
